welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:4: error: Int does not take parameters
  var long: Int = nums.length() - 1
                             ^averageValue:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to long) {
        ^